--- a/notebooks/nmf/Celltype_prediction_with_NNLS.qmd
+++ b/notebooks/nmf/Celltype_prediction_with_NNLS.qmd
@@ -6,30 +6,40 @@ editor_options:
   chunk_output_type: inline
 ---
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(STUtility2)
 library(tibble)
 library(dplyr)
-library(RcppML)
+library(TabulaMurisSenisData)
+library(Seurat)
+library(purrr)
+library(patchwork)
+library(ggplot2)
 ```
 
-## Download data
+# Mouse brain
 
-For this test, we will use a single-cell dataset from the Allen Brain Atlas.
+## Download mouse brain data
 
-```{r}
+For this test, we will use a single-cell dataset from the Allen Brain Atlas. You can check the code chunk below or follow [this](https://www.dropbox.com/s/cuowvm4vrf65pvq/allen_cortex.rds?dl=1) link to download it manually. 
+
+```{r eval=FALSE}
+#| code-fold: true
 options(timeout=200)
-tmpdir <- "./"
+tmpdir <- "." # Set current wd or change to tmpdir()
 dir.create(paste0(tmpdir, "/mousebrain"))
 tmpdir <- paste0(tmpdir, "/mousebrain")
 dir.create(paste0(tmpdir, "/single-cell"))
 destfile <- paste0(tmpdir, "/single-cell/allen_brain.rds")
 download.file("https://www.dropbox.com/s/cuowvm4vrf65pvq/allen_cortex.rds?dl=1", destfile = destfile)
+
 ```
 
-And 10x Visium data from 10x Genomics website
+We will also need to download the 10x Visium data from 10x Genomics website. You can download the files directly with R 
+by following the code chunk below or download the data directly from [here](https://www.10xgenomics.com/resources/datasets).
 
-```{r}
+```{r eval=FALSE}
+#| code-fold: true
 dir.create(paste0(tmpdir, "/visium"))
 
 # Download section 1
@@ -51,48 +61,49 @@ untar(tarfile = paste0(tmpdir, "/visium/S2/spatial.tar.gz"),
 file.remove(paste0(tmpdir, "/visium/S2/spatial.tar.gz"))
 ```
 
-Load Visium data
+Load Visium data with STUtility2 into a Seurat object. The following steps assumes that the mouse brain 10x Visium
+data is located in `./mousebrain/visium/`.
 
-```{r}
+```{r eval=FALSE}
 # Assemble spaceranger output files
-samples <- list.files(path = paste0(tmpdir, "/visium"),
-                      pattern = "filtered_feature_bc_matrix.h5", recursive = TRUE,
-                      full.names = TRUE)
-imgs <- list.files(path = paste0(tmpdir, "/visium"),
-                   pattern = "tissue_hires_image.png", recursive = TRUE,
-                   full.names = TRUE)
-spotfiles <- list.files(path = paste0(tmpdir, "/visium"),
-                        pattern = "tissue_positions_list.csv", recursive = TRUE,
-                        full.names = TRUE)
-json <- list.files(path = paste0(tmpdir, "/visium"),
-                   pattern = "scalefactors_json.json", recursive = TRUE,
-                   full.names = TRUE)
+samples <- Sys.glob("./mousebrain/visium/*/filtered_feature_bc_matrix.h5")
+imgs <- Sys.glob("./mousebrain/visium/*/spatial/tissue_hires_image.png")
+spotfiles <- Sys.glob("./mousebrain/visium/*/spatial/tissue_positions_list.csv")
+json <- Sys.glob("./mousebrain/visium/*/spatial/scalefactors_json.json")
+
 infoTable <- tibble(samples, imgs, spotfiles, json, section_id = paste0("section_", 1:2))
 
 # Create Seurat object with 1 Sagittal Anterior section and 1 Sagittal Posterior section
-se_spatial <- ReadVisiumData(infoTable)
+se_brain_spatial <- ReadVisiumData(infoTable)
 
-# samples <- "~/FFPE/10x_data/V10J14-101_A1/filtered_feature_bc_matrix.h5"
-# imgs <- "~/FFPE/10x_data/V10J14-101_A1/spatial/tissue_hires_image.png"
-# spotfiles <- "~/FFPE/10x_data/V10J14-101_A1/spatial/tissue_positions_list.csv"
-# json <- "~/FFPE/10x_data/V10J14-101_A1/spatial/scalefactors_json.json"
-# infoTable <- tibble(samples, imgs, spotfiles, json)
-# se_brain <- ReadVisiumData(infoTable)
 ```
+
 
 Load single-cell data
 
-```{r}
-se_allen <- readRDS(destfile)
+```{r eval=FALSE}
+
+se_allen <- readRDS("./mousebrain/single-cell/allen_cortex.rds")
+
 ```
 
-Normalize data
+### Normalize data
 
-```{r}
-se_spatial <- se_spatial |>
+Here we will apply the same log-normalization procedure to both the 10x Visium data (`se_brain_spatial`)
+and to the single-cell data (`se_brain_singlecell`). We set the number of variable features quite high because
+later on we will use the intersect between the variable features in the single-cell data and the variable 
+features in the 10x Visium data for NNLS. The NNLS method is quite fast so there is actually no need to 
+select only a subset of features. Instead, we can just use all genes that are shared across the single-cell
+and 10x Visium data.
+
+```{r eval=FALSE}
+
+# Normalize data and find variable features for Visium data
+se_brain_spatial <- se_brain_spatial |>
   NormalizeData() |>
   FindVariableFeatures(nfeatures = 10000)
 
+# Normalize data and run vanilla analysis to create UMAP embedding
 se_allen <- se_allen |>
   NormalizeData() |>
   FindVariableFeatures() |> 
@@ -100,34 +111,230 @@ se_allen <- se_allen |>
   RunPCA() |> 
   RunUMAP(reduction = "pca", dims = 1:30)
 
+# Rerun FindVariableFeatures to increase the number before cell type deconvolution
 se_allen <- se_allen |> 
   FindVariableFeatures(nfeatures = 10000)
+
 ```
 
+```{r include=FALSE, eval=FALSE}
+
+saveRDS(se_allen, file = "~/10x_data/R_objects/allen_brain")
+saveRDS(se_brain_spatial, file = "~/10x_data/R_objects/se_brain_spatial")
+
+```
+
+```{r include=FALSE}
+
+se_allen <- readRDS("~/10x_data/R_objects/allen_brain")
+se_brain_spatial <- readRDS("~/10x_data/R_objects/se_brain_spatial")
+
+```
+
+We can visualize the available cell types in our UMAP embedding of the cells. We have access
+to 23 annotated cell types, including L2-L6 layer neurons which have a distinct spatial distribution
+in the tissue.
+
 ```{r}
+
 DimPlot(se_allen, group.by = "subclass")
+
 ```
 
 ## Run NNLS
 
-```{r fig.width=5, fig.height=16}
-DefaultAssay(se_spatial) <- "Spatial"
-se_spatial <- RunNNLS(object = se_spatial, 
+The `RunNNLS` method requires a normalized `Seurat` object with 10x Visium data and a 
+a normalized `Seurat` object with single-cell data. The `groups` argument defines where
+the cell type labels should be taken from in the single-cell `Seurat` object. In our single-cell
+`Seurat` object, the labels are stored in the "subclass" column.
+
+```{r}
+DefaultAssay(se_brain_spatial) <- "Spatial"
+
+ti <- Sys.time()
+se_brain_spatial <- RunNNLS(object = se_brain_spatial, 
                             singlecell_object = se_allen, 
                             groups = "subclass")
+sprintf("RunNNLS completed in %s seconds", round(Sys.time() - ti, digits = 2))
 
 # Check available cell types
-rownames(se_spatial)
+rownames(se_brain_spatial)
+```
 
+NB: the CR cell type was discarded because the number of cell was lower than 10. 10 is the 
+lower limit for the allowed number of cells per cell type but this can be overridden with
+`minCells_per_celltype`.
+
+### Mouse brain cell types
+
+The plots below show the spatial distributions of proportions for a selected set of cell types.
+
+::: panel-tabset
+```{r}
+#| results: asis
+#| code-fold: true
 # Plot selected cell types
-DefaultAssay(se_spatial) <- "celltypeprops"
-MapFeatures(se_spatial, 
-            features = c("L2/3 IT", "L4", "L5 IT", 
-                         "L5 PT", "L6 CT", "L6 IT", "L6b"), 
+DefaultAssay(se_brain_spatial) <- "celltypeprops"
+
+selected_celltypes <- c("L2/3 IT", "L4", "L5 IT", 
+                       "L5 PT", "L6 CT", "L6 IT", "L6b", 
+                       "Oligo", "Pvalb", "Meis2", "Astro",
+                       "VLMC")
+plots <- lapply(seq_along(selected_celltypes), function(i) {
+  MapFeatures(se_brain_spatial, pt_size = 1.3,
+            features = selected_celltypes[i], 
             arrange_features = "row", scale = "shared", 
             override_plot_dims = TRUE)  +
   plot_layout(guides = "collect") & 
   theme(legend.position = "right", legend.margin = margin(b = 50),
         legend.text = element_text(angle = 0),
         plot.title = element_blank())
+}) |> setNames(nm = selected_celltypes)
+
+iwalk(plots, ~ {
+  cat('#### ', .y, '\n\n')
+  
+  print(.x)
+  
+  cat("\n\n")
+})
+
+```
+:::
+
+# Mouse kidney
+
+In the second example, we'll look at data from mouse kidney. We can obtain the single-cell data with the 
+`TabulaMurisSenisData` R package from bioconductor. Let's load the data and create a `Seurat` object from it.
+
+## Load mouse kidney data
+
+```{r eval=FALSE}
+#| code-fold: true
+sce <- TabulaMurisSenisDroplet(tissues = "Kidney")$Kidney
+umis <- as(counts(sce), "dgCMatrix")
+se_kidney_singlecell <- CreateSeuratObject(counts = umis, meta.data = colData(sce) |> as.data.frame())
+
+```
+
+The 10x Visium mouse kidney data can be downloaded from the 10x genomics website.
+
+```{r eval=FALSE}
+#| code-fold: true
+samples <- "~/10x_data/mouse_kidney/filtered_feature_bc_matrix.h5"
+imgs <- "~/10x_data/mouse_kidney/spatial/tissue_hires_image.png"
+spotfiles <- "~/10x_data/mouse_kidney/spatial/tissue_positions_list.csv"
+json <- "~/10x_data/mouse_kidney/spatial/scalefactors_json.json"
+
+infoTable <- tibble::tibble(samples, imgs, spotfiles, json)
+
+se_kidney_spatial <- ReadVisiumData(infoTable)
+
+```
+
+### Normalize data
+
+We apply the same normalization procedure to `se_kidney_spatial` and `se_kidney_singlecell` and 
+run `FindVariableFeatures` to detect the top most variable genes.
+
+```{r eval=FALSE}
+
+se_kidney_spatial <- se_kidney_spatial |>
+  NormalizeData() |>
+  FindVariableFeatures(nfeatures = 10000)
+
+```
+
+For the single-cell kidney data, we'll also filter the data prior to normalization to include
+cells collected at age 18m and remove cells with labels "nan" and "CD45". This leaves us with 17 cell types.
+
+```{r eval=FALSE}
+
+keep_cells <- colnames(se_kidney_singlecell)[se_kidney$age == "18m" & (!se_kidney_singlecell$free_annotation %in% c("nan", "CD45"))]
+se_kidney_singlecell <- subset(se_kidney_singlecell, cells = keep_cells)
+
+```
+
+```{r eval=FALSE}
+
+se_kidney_singlecell <- se_kidney_singlecell |>
+  NormalizeData() |>
+  FindVariableFeatures() |> 
+  ScaleData() |> 
+  RunPCA() |> 
+  RunUMAP(reduction = "pca", dims = 1:30)
+
+se_kidney_singlecell <- se_kidney_singlecell |> 
+  FindVariableFeatures(nfeatures = 10000)
+
+```
+
+```{r include=FALSE}
+# Load prepared kidney data
+se_kidney_singlecell <- readRDS("~/10x_data/R_objects/se_kidney_singlecell")
+se_kidney_spatial <- readRDS("~/10x_data/R_objects/se_kidney_spatial")
+
+```
+
+## Run NNLS
+
+Again, the `RunNNLS` method requires a single-cell `Seurat` object and a 10x Visium `Seurat` 
+object. The cell type annotations are stored in the "free_annotation" column.
+
+```{r}
+  
+ti <- Sys.time()
+DefaultAssay(se_kidney_spatial) <- "Spatial"
+se_kidney_spatial <- RunNNLS(object = se_kidney_spatial, 
+                      singlecell_object = se_kidney_singlecell, 
+                      groups = "free_annotation")
+sprintf("RunNNLS finished in %s seconds", round(Sys.time() - ti, digits = 2))
+
+# Check available cell types
+rownames(se_kidney_spatial)
+
+```
+NB: two cell types were discarded as they didn't pass the minimum allowed cells per cell type threshold.
+The cell types discarded were NK cells and plasma cells.
+
+### Kidney cell types
+
+::: panel-tabset
+```{r}
+#| results: asis
+#| code-fold: true
+# Plot selected cell types
+DefaultAssay(se_kidney_spatial) <- "celltypeprops"
+
+selected_celltypes <- c("Epcam     kidney distal convoluted tubule epithelial cell",
+                        "Epcam    brush cell",
+                        "Epcam    kidney collecting duct principal cell",
+                        "Epcam    kidney proximal convoluted tubule epithelial cell",
+                        "Epcam    podocyte",
+                        "Epcam    proximal tube epithelial cell",
+                        "Epcam    thick ascending tube S epithelial cell",
+                        "Pecam    fenestrated capillary endothelial",
+                        "Pecam    kidney capillary endothelial cell",
+                        "Stroma    kidney mesangial cell")
+plots <- lapply(seq_along(selected_celltypes), function(i) {
+  MapFeatures(se_kidney_spatial, pt_size = 1.3,
+            features = selected_celltypes[i], 
+            override_plot_dims = TRUE) & 
+  theme(plot.title = element_blank())
+}) |> setNames(nm = selected_celltypes)
+
+iwalk(plots, ~ {
+  cat('#### ', .y, '\n\n')
+  
+  print(.x)
+  
+  cat("\n\n")
+})
+
+```
+:::
+
+```{r eval=FALSE, include=FALSE}
+saveRDS(se_kidney_singlecell, file = "~/10x_data/R_objects/se_kidney_singlecell")
+saveRDS(se_kidney_spatial, file = "~/10x_data/R_objects/se_kidney_spatial")
 ```
