--- a/notebooks/plotting/plotting_features.qmd
+++ b/notebooks/plotting/plotting_features.qmd
@@ -1,14 +1,21 @@
 ---
-title: "Mapping features spatially with STUtility2"
-format: html
+title: "Spatial mapping of features"
+format: 
+  html:
+    toc: true
+    toc-depth: 3
+    embed-resources: true
+    theme:
+      light: flatly
+      dark: darkly
 editor: visual
 ---
 
 ## Introduction
 
-In this notebook, we'll have a look at different ways of creating spatial plots with *STUtility2*. Functions such as `MapFeatures` and `MapLabels` produce patchworks (see R package [patchwork](https://patchwork.data-imaginist.com/)) which are easy to manipulate after they have been created. The *patchwork* R package is extremely versatile and has a fantastic API to customize your figures! Here we'll have a look at some options that comes with `MapFeatures` and `MapLabels` a couple of tips and tricks for how to use the *patchwork* R package.
+In this notebook, we'll have a look at different ways of creating spatial plots with `STUtility2`. Functions such as `MapFeatures` and `MapLabels` produce patchworks (see R package [patchwork](https://patchwork.data-imaginist.com/)) which are easy to manipulate after they have been created. The `patchwork` R package is extremely versatile and makes it easy to customize your figures! Here we'll have a look at some options that comes with `MapFeatures` and `MapLabels` a couple of tips and tricks for how to use the `patchwork` R package.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(tibble)
 library(ggplot2)
 library(patchwork)
@@ -18,36 +25,31 @@ library(scico)
 
 ## Load data
 
-First we need to load some 10x Visium data. here we'll use a mouse brain tissue dataset and a mouse colon dataset that are shipped with *STUtility2*.
+First we need to load some 10x Visium data. here we'll use a mouse brain tissue dataset and a mouse colon dataset that are shipped with `STUtility2`.
 
 ```{r}
-samples <- Sys.glob(paths = paste0(system.file("extdata", package = "STUtility2"), 
-                                   "/*/filtered_feature_bc_matrix.h5"))
-imgs <- Sys.glob(paths = paste0(system.file("extdata", package = "STUtility2"), 
-                                "/*/spatial/tissue_hires_image.png"))
-spotfiles <- Sys.glob(paths = paste0(system.file("extdata", package = "STUtility2"), 
-                                     "/*/spatial/tissue_positions_list.csv"))
-json <- Sys.glob(paths = paste0(system.file("extdata", package = "STUtility2"), 
-                                "/*/spatial/scalefactors_json.json"))
-
-# Create a tibble/data.frame with file paths
-infoTable <- tibble(samples, imgs, spotfiles, json, sample_id = c("mousebrain", "mousecolon"))
-
-# Create Seurat object
-se <- ReadVisiumData(infoTable = infoTable) |>
-  NormalizeData()
+# Load data
+se_mbrain <- readRDS(file = system.file("extdata", 
+                                        "mousebrain/se_mbrain", 
+                                        package = "STUtility2"))
+se_mbrain$sample_id <- "mousebrain"
+se_mcolon <- readRDS(file = system.file("extdata", 
+                                        "mousecolon/se_mcolon", 
+                                        package = "STUtility2"))
+se_mcolon$sample_id <- "mousecolon"
+se <- MergeSTData(se_mbrain, se_mcolon)
 ```
 
 ## A note about features
 
-In *STUtility2*, we can use `MapFeatures` and `MapLabels` to make spatial plots showing the distribution of numeric or categorical features. For those who are familiar with *Seurat*, these functions are similar to `SpatialFeaturePlot` and `SpatialDimPlot` in the sense that the first can be used to visualize numeric data and the latter can be used to color data points based on categorical data.
+We can use the functions `MapFeatures` and `MapLabels` to make spatial plots showing the distribution of numeric or categorical features. For those who are familiar with `Seurat`, these functions are similar to `SpatialFeaturePlot` and `SpatialDimPlot` in the sense that the first can be used to visualize numeric data and the latter can be used to color data points based on categorical data.
 
 ## Map numeric features
 
 Let's get started with `MapFeatures`. The most basic usage is to map gene expression spatially:
 
-```{r fig.width=6, fig.height=8}
-cols <- viridis::viridis(n = 11) #c("lightgrey", "mistyrose", "red", "darkred")
+```{r fig.asp=1.2}
+cols <- RColorBrewer::brewer.pal(n = 11, name = "Spectral") |> rev()
 p <- MapFeatures(se, features = c("Th", "Clu"), colors = cols)
 p
 ```
@@ -56,15 +58,15 @@ We can also use the function `MapFeaturesSummary` to add a subplot next to the s
 
 This function only takes one gene at the time, but you can patch two plots together manually if desired.
 
-```{r fig.width=6, fig.height=3}
+```{r fig.asp=0.6}
 p <- MapFeaturesSummary(se, 
                         features = "Clu", 
-                        # subplot_type = "violin", 
+                        subplot_type = "violin", 
                         colors = cols)
 p
 ```
 
-```{r fig.width=6, fig.height=3}
+```{r fig.asp=0.6}
 p1 <- MapFeaturesSummary(se,
                          section_number = 1,
                          features = "Clu", 
@@ -82,15 +84,15 @@ p1|p2
 
 If we want to create a map with the H&E images we can do this by setting `image_use = raw`. But before we can do this, we need to load the images into our *Seurat* object:
 
-```{r fig.width=6, fig.height=8}
-se <- LoadImages(se)
+```{r fig.asp=1.2}
+se <- LoadImages(se, verbose = FALSE)
 p <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", colors = cols)
 p
 ```
 
 Right now it's quite difficult to see the tissue underneath the spots. We can add some opacity to the colors which is scaled by the feature values to make spots with low expression transparent:
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 
 p <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", 
                  colors = cols, scale_alpha = TRUE)
@@ -101,7 +103,7 @@ p
 
 By default, `MapFeatures` arranges features in columns and samples in rows. We can transpose the plot by setting `arrange_features` to "row":
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "row", color = cols)
 p
 ```
@@ -110,16 +112,16 @@ p
 
 The color bars are now identical for each feature. `MapFeatures` calculates the range for each feature and uses this range to determine the limits of the color bars. If you want to change this behavior to scale the values independently, you can set `scale = "free"`:
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 p <- MapFeatures(se, features = c("Th", "Clu"), scale = "free", colors = cols)
 p
 ```
 
-### Override plot dimensions
+### Fit plot area to spots
 
 `MapFeatures` used the image dimensions to define the plot area dimensions. Sometimes, if you have a very small piece of tissue, you will end up with a lot of white space. You can override this behavior by setting `override_plot_dims = TRUE` which will make `MapFeatures` compute the dimensions based on your coordinates. Notice how the tissues are expanded:
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 p <- MapFeatures(se, features = c("Th", "Clu"), override_plot_dims = TRUE, color = cols)
 p
 ```
@@ -128,7 +130,7 @@ p
 
 Themes can be modified by adding a new ggplot theme using the `&` operator. This operator will make sure that the theme is added to each subplot in our patchwork. As an example, let's say that we want to place the legends on the right side of our plots instead:
 
-```{r fig.width=8, fig.height=8}
+```{r fig.asp=0.9}
 p <- MapFeatures(se, features = c("Th", "Clu"), color = cols) &
   theme(legend.position = "right", legend.text = element_text(angle = 0))
 p
@@ -136,7 +138,7 @@ p
 
 We can also remove the color legends entirely:
 
-```{r fig.width=6, fig.height=6}
+```{r fig.asp=1.1}
 p <- MapFeatures(se, features = c("Th", "Clu"), colors = cols) &
   theme(legend.position = "none")
 p
@@ -144,7 +146,7 @@ p
 
 Or remove everything except the spatial feature map:
 
-```{r fig.width=6, fig.height=6}
+```{r fig.asp=1}
 p <- MapFeatures(se, features = c("Th", "Clu"), colors = cols) &
   theme(legend.position = "none", 
         plot.title = element_blank(), 
@@ -152,11 +154,11 @@ p <- MapFeatures(se, features = c("Th", "Clu"), colors = cols) &
 p
 ```
 
-### Reduce the number of color bars
+### Collect color bars
 
 If we don't want to have the same color bar next to each tissue section, we can collect identical color bars and place them on the side. We can use `plot_layout(guides = "collect")` to modify this. Note that if we want to place the color bar on the right side of the plots, we need to set `arrange_features = "row"`\` and adjust the legend position:
 
-```{r fig.width=8, fig.height=8}
+```{r fig.asp=0.9}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "row", colors = cols) +
   plot_layout(guides = "collect") &
   theme(legend.position = "right", legend.text = element_text(angle = 0))
@@ -165,7 +167,7 @@ p
 
 This already looks quite good, but the color bars are a bit misplaced. We can adjust their placement by modifying the legend margins:
 
-```{r fig.width=8, fig.height=8}
+```{r fig.asp=0.9}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "row", color = cols) +
   plot_layout(guides = "collect") &
   theme(legend.position = "right", 
@@ -178,7 +180,7 @@ p
 
 If we set `scale = "free"`, the color bars are no longer unique and it doesn't make sense to collect the color bars anymore:
 
-```{r fig.width=8, fig.height=8}
+```{r fig.asp=1}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "row", 
                  scale = "free", colors = cols) +
   plot_layout(guides = "collect") &
@@ -192,7 +194,7 @@ p
 
 If we set `arrange_features = "col"`, the placement of the color bar will not make sense in this case either. The color bars are now located on the right side, but the features are arranged by row:
 
-```{r fig.width=8, fig.height=8}
+```{r fig.asp=1}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "col", colors = cols) +
   plot_layout(guides = "collect") &
   theme(legend.position = "right", 
@@ -203,7 +205,7 @@ p
 
 Instead, if we want to arrange features by columns, it would make more sense to place the color bars on top of each column and adjust the legend margins accordingly:
 
-```{r fig.width=7, fig.height=8}
+```{r fig.asp=1.1}
 p <- MapFeatures(se, features = c("Th", "Clu"), arrange_features = "col", color = cols) +
   plot_layout(guides = "collect") &
   theme(legend.position = "top", 
@@ -214,27 +216,28 @@ p
 
 ### Remove plot margins
 
-If you still think that there's too much empty space in the patchwork, you can remove the plot margins for each subplot:
+If you still think that there's too much empty space around the tissues in the patchwork, you try setting `override_plot_dims = TRUE` which will crop the plot area to only fit the spots:
 
-```{r fig.width=6, fig.height=8}
-p <- MapFeatures(se, features = c("Th", "Clu"), override_plot_dims = TRUE, color = cols) &
-  theme(plot.margin = margin(0, 0, 0, 0))
+```{r fig.asp=1.1}
+p <- MapFeatures(se, features = c("Th", "Clu"), override_plot_dims = TRUE, color = cols)
 p
 ```
 
 ### Crop
 
-If you set `override_plot_dims = TRUE`, the image will also be cropped to fit the new plot dimensions. This can be particularly useful when working with small tissue sections that only cover a small portion of the 10x Visium capture area.
+H&E images will also be cropped to fit the new plot dimensions if `override_plot_dims = TRUE`. This can be particularly useful when working with small tissue sections that only cover a small portion of the 10x Visium capture area.
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 p <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", 
                  override_plot_dims = TRUE, color = cols)
 p
 ```
 
-Note that the plots dimensions are calculated for the entire dataset when `override_plot_dims = TRUE`, in this case for the mouse brain and the mouse colon section. In other words the plot dimensions are defined to fit both datasets. If you don't want this behavior, it is better to make two separate plots:
+Note that the plots dimensions are calculated for the entire dataset when `override_plot_dims = TRUE`.
 
-```{r fig.width=6, fig.height=8}
+If the tissue sections are placed in very different part of the capture area, the resulting "crop" window might not be what you are looking for. If you want to avoid this behavior, it is better to make two separate plots. Notice the difference in the plot below compared to the previous plot. The previous plot had some empty space outside of the tissue.
+
+```{r fig.asp=1.2}
 p1 <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", 
                  override_plot_dims = TRUE, color = cols, section_number = 1)
 p2 <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", 
@@ -246,17 +249,17 @@ We can also crop the images manually by defining a `crop_area`. The `crop_area` 
 
 In order to decide how this rectangle should be defined, you can get some help by adding a grid to the plot:
 
-```{r fig.width=6, fig.height=8}
+```{r fig.asp=1.2}
 p <- MapFeatures(se, features = c("Th", "Clu"), image_use = "raw", 
                  color = cols, pt_alpha = 0.5) &
   theme(panel.grid.major = element_line(linetype = "dashed"), axis.text = element_text())
 p
 ```
 
-Now if we want to crop out the GALT tissue in the mouse colon sample we can cu the image at left=0.45, bottom=0.55, right=0.65, top=0.7:
+Now if we want to crop out the GALT tissue in the mouse colon sample we can cut the image at left=0.45, bottom=0.55, right=0.65, top=0.7:
 
-```{r fig.width=6, fig.height=4}
-p <- MapFeatures(se, features = c("Ms4a1", "Clu"), image_use = "raw", 
+```{r fig.asp=0.5}
+p <- MapFeatures(se, features = c("Cd79a", "Clu"), image_use = "raw", 
                  pt_size = 3, section_number = 2, 
                  color = cols, crop_area = c(0.45, 0.55, 0.65, 0.7))
 p
@@ -264,12 +267,12 @@ p
 
 And we can patch together a nice figure showing the expression both at a global level and inside the GALT:
 
-```{r fig.width=6.5, fig.height=6}
-p_global <- MapFeatures(se, features = c("Ms4a1", "Clu"), 
+```{r fig.asp=1}
+p_global <- MapFeatures(se, features = c("Cd79a", "Clu"), 
                         image_use = "raw", scale_alpha = TRUE,
                         pt_size = 1, section_number = 2, color = cols, 
                         override_plot_dims = TRUE)
-p_GALT <- MapFeatures(se, features = c("Ms4a1", "Clu"), 
+p_GALT <- MapFeatures(se, features = c("Cd79a", "Clu"), 
                       image_use = "raw", scale_alpha = TRUE, 
                       pt_size = 3, section_number = 2, 
                       color = cols, crop_area = c(0.45, 0.55, 0.65, 0.7)) &
@@ -294,12 +297,12 @@ print(object.size(se_high_res), units = "MB")
 
 Note that these higher resolution images will take up more space and might slow down the plotting considerably.
 
-```{r fig.width=6.5, fig.height=6}
-p_global <- MapFeatures(se_high_res, features = c("Ms4a1", "Clu"), 
+```{r fig.asp=1}
+p_global <- MapFeatures(se_high_res, features = c("Cd79a", "Clu"), 
                         image_use = "raw", scale_alpha = TRUE,
                         pt_size = 1, section_number = 2, color = cols, 
                         override_plot_dims = TRUE)
-p_GALT <- MapFeatures(se_high_res, features = c("Ms4a1", "Clu"), 
+p_GALT <- MapFeatures(se_high_res, features = c("Cd79a", "Clu"), 
                       image_use = "raw", scale_alpha = TRUE, 
                       pt_size = 3, section_number = 2, 
                       color = cols, crop_area = c(0.45, 0.55, 0.65, 0.7)) &
@@ -314,8 +317,8 @@ p_GALT <- MapFeatures(se_high_res, features = c("Ms4a1", "Clu"),
 
 For categorical data, we use `MapLabels` instead of `MapFeatures`. This function allows us to color our spots based on some column of our Seurat object containing categorical data.
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "sample_id") &
+```{r fig.asp=1.3}
+MapLabels(se, column_name = "sample_id", ncol = 1) &
   theme(legend.position = "right")
 ```
 
@@ -323,9 +326,9 @@ MapLabels(se, column_name = "sample_id") &
 
 Categorical data can be represented as character vectors or factors, but with factors it's easier to control the order of the labels as well as their colors. If we want to customize the order, we can convert our column into a factor and set the levels as we please:
 
-```{r fig.width=7, fig.height=3}
+```{r fig.asp=1.3}
 se$sample_id_factor <- factor(se$sample_id, levels = c("mousecolon", "mousebrain"))
-MapLabels(se, column_name = "sample_id_factor") &
+MapLabels(se, column_name = "sample_id_factor", ncol = 1) &
   theme(legend.position = "right")
 ```
 
@@ -333,15 +336,17 @@ MapLabels(se, column_name = "sample_id_factor") &
 
 If we pass a named vector of colors we can control the coloring of our labels:
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "sample_id_factor", 
+```{r fig.asp=1.3}
+MapLabels(se, column_name = "sample_id_factor", ncol = 1,
           colors = c("mousecolon" = "#4477AA", "mousebrain" = "#CC6677")) &
   theme(legend.position = "right")
 ```
 
-Let's run an unsupervised clustering on our data to get slightly more interesting results to work with:
+Let's run unsupervised clustering on our data to get slightly more interesting results to work with.
 
-```{r fig.width=7, fig.height=3, message=FALSE, warning=FALSE}
+NB: It doesn't make much sense to run data-driven clustering on two completely different tissue types, but here we are only interested in demonstrating how you can use `MapLabels`.
+
+```{r message=FALSE, warning=FALSE}
 se <- se |>
   NormalizeData() |>
   ScaleData() |>
@@ -353,8 +358,8 @@ se <- se |>
 
 ### Map clusters
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "seurat_clusters") &
+```{r fig.asp=1.3}
+MapLabels(se, column_name = "seurat_clusters", ncol = 1) &
   theme(legend.position = "right")
 ```
 
@@ -364,8 +369,8 @@ MapLabels(se, column_name = "seurat_clusters") &
 
 If you want to increase the size of the spots in the color legend, you can override the `fill` aesthetic that controls the appearance of the points without changing the size of the points in the plot. We can do this by using `guides(fill = guide_legend(override.aes = list(size = ...)))`:
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "seurat_clusters") &
+```{r fig.asp=1.3}
+MapLabels(se, column_name = "seurat_clusters", ncol = 1) &
   guides(fill = guide_legend(override.aes = list(size = 3))) &
   theme(legend.position = "right")
 ```
@@ -374,8 +379,8 @@ MapLabels(se, column_name = "seurat_clusters") &
 
 Another useful option is to adjust the arrangement of the color legend. For example, if you have a lot of different categories, it might be easier to read the labels if they are arranged in multiple columns:
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "seurat_clusters") &
+```{r fig.asp=1.3}
+MapLabels(se, column_name = "seurat_clusters", ncol = 1) &
   guides(fill = guide_legend(override.aes = list(size = 3), ncol = 2)) &
   theme(legend.position = "right")
 ```
@@ -384,8 +389,8 @@ MapLabels(se, column_name = "seurat_clusters") &
 
 Since all sub plots share the same color legends, we can collect them and place them on the side of the plot:
 
-```{r fig.width=7, fig.height=3}
-MapLabels(se, column_name = "seurat_clusters") +
+```{r fig.asp=1.33}
+MapLabels(se, column_name = "seurat_clusters", ncol = 1) +
   plot_layout(guides = "collect") &
   guides(fill = guide_legend(override.aes = list(size = 3), ncol = 2)) &
   theme(legend.position = "right")
@@ -395,7 +400,7 @@ MapLabels(se, column_name = "seurat_clusters") +
 
 And just as with `MapFeatures`, we can add our H&E images to the plots:
 
-```{r fig.width=7, fig.height=3}
+```{r fig.asp=0.4}
 MapLabels(se, column_name = "seurat_clusters", image_use = "raw", 
           override_plot_dims = TRUE) +
   plot_layout(guides = "collect") &
@@ -407,7 +412,7 @@ MapLabels(se, column_name = "seurat_clusters", image_use = "raw",
 
 Sometimes it can get cluttered in the plot and difficult to see where each cluster is located in the tissue, especially when there are many clusters and some of them have very similar colors. In this case, `MapLabels` can split the data into separate panels, one for each label:
 
-```{r fig.width=7, fig.height=6}
+```{r fig.asp=0.9}
 MapLabels(se, column_name = "seurat_clusters", split_labels = TRUE) +
   plot_layout(guides = "collect") &
   theme(legend.position = "right")
@@ -415,9 +420,9 @@ MapLabels(se, column_name = "seurat_clusters", split_labels = TRUE) +
 
 When you split data, you can only do it for one section which is why a warning is thrown and the first available section is selected. If you want to use a different section, you can specify which one to use with `section_number`:
 
-```{r fig.width=7, fig.height=8}
+```{r fig.asp=1.3}
 MapLabels(se, column_name = "seurat_clusters", split_labels = TRUE, 
-          section_number = 2, ncol = 2) +
+          section_number = 2, ncol = 1) +
   plot_layout(guides = "collect") &
   theme(legend.position = "right")
 ```
@@ -426,7 +431,7 @@ MapLabels(se, column_name = "seurat_clusters", split_labels = TRUE,
 
 When mapping categorical features in split view it might be more useful to see the underlying image. If you set `drop_na = TRUE`, the background spots will be removed:
 
-```{r fig.width=6.5, fig.height=6}
+```{r fig.asp=1}
 MapLabels(se, column_name = "seurat_clusters", split_labels = TRUE, 
           image_use = "raw", drop_na = TRUE, override_plot_dims = TRUE) +
   plot_layout(guides = "collect") &
